tests/error/incomplete_parent.gw
// [contains] cannot extend incomplete type
 class C extends UnknownParentClass {}
class UnknownParentClass {}
